--- a/package.json
+++ b/package.json
@@ -11,22 +11,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^13.0.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "base-64": "^1.0.0",
+    "bootstrap": "^5.3.2",
+    "ngx-cookie-service": "^17.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "utf8": "^3.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.13",
     "@angular/cli": "~14.2.13",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/base-64": "^1.0.2",
     "@types/jasmine": "~4.0.0",
+    "@types/utf8": "^3.0.3",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
