--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^14.2.0",
     "base-64": "^1.0.0",
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "ngx-cookie-service": "^17.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "utf8": "^3.0.0",
